@@ -9,8 +9,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt gettext mkstemp pathmax regex restrict save-cwd stdbool strcase vasnprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpass-gnu gettext mkstemp pathmax regex restrict save-cwd stdbool strcase vasnprintf xalloc xgetcwd xsize
 
 AUTOMAKE_OPTIONS = 1.8 gnits
 
@@ -86,6 +86,8 @@ getopt.h: getopt_.h
 	cp $(srcdir)/getopt_.h $@-t
 	mv $@-t $@
 MOSTLYCLEANFILES += getopt.h getopt.h-t
+
+libgnu_a_SOURCES += getpass.h
 
 libgnu_a_SOURCES += gettext.h
 
